Ingress-Controller/advance_routing/ui_app_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yum-food
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yum-food
  template:
    metadata:
      labels:
        app: yum-food
    spec:
      containers:
      - name: yum-food
        image: kuldeepjakhi/yum-food
        ports:
          - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: yum-food
spec:
  selector:
    app: yum-food
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
