Ingress-Controller/advance_routing/ingress_path_based.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress-path-based
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: todo.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: netdata
                port:
                  number: 19999
          - path: /msgapi
            pathType: Prefix
            backend:
              service:
                name: matomo
                port:
                  number: 9000
